--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #ffe9ec;
 }
 
 .logo {
@@ -40,3 +40,7 @@
 .read-the-docs {
   color: #888;
 }
+button{
+  min-width : 100px
+}
+
